--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="login_username">用户名</string>
     <string name="login_password">密码</string>
     <string name="login_forget_password">忘记密码？</string>
+    <string name="please_input_car">请输入司机姓名/车牌号</string>
+    <string name="please_input_addr">请输入始发地/目的地</string>
+    <string name="please_select_start_addr">请选择始发地</string>
+    <string name="please_select_end_addr">请选择目的地</string>
 </resources>
