--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="please_input_addr">请输入始发地/目的地</string>
     <string name="please_select_start_addr">请选择始发地</string>
     <string name="please_select_end_addr">请选择目的地</string>
+    <string name="please_select_start_time">请选择开始时间</string>
+    <string name="please_select_end_time">请选择结束时间</string>
 </resources>
