--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="please_select_end_addr">请选择目的地</string>
     <string name="please_select_start_time">请选择开始时间</string>
     <string name="please_select_end_time">请选择结束时间</string>
+    <string name="query_success">^_^ 查询成功!</string>
+    <string name="empty_data">暂时没有数据~</string>
 </resources>
