--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="shared_view_name">tracePreview</string>
+    <string name="setting_max_car_count" >setting_max_car_count</string>
+    <string name="setting_animate_thread_count">setting_animate_thread_count</string>
+    <string name="setting_notification">setting_notification</string>
 </resources>
